# rust-ili9325

./: Cargo.toml  openocd.cfg
examples/: ili9325-on-gpio.rs
src/: graphics_core.rs  lib.rs
