[package]
name = "ili9325"
version = "0.1.0"
edition = "2021"
authors = ["Dillon Min <dillon.minfei@gmail.com>"]
description = "A platform agnostic driver to interface with the ILI9325 TFT LCD display"
keywords = ["embedded-hal-driver", "display", "LCD"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
[dependencies]
display-interface = { version = "0.4" }
embedded-graphics = "0.7.1"
#display-interface = { version = "0.5.0-alpha.1", path = "../display-interface" }

[dependencies.embedded-graphics-core]
version = "0.3"
optional = true

[dependencies.embedded-hal]
version = "0.2.5"

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

[dev-dependencies]
embedded-graphics = "0.7.1"
cortex-m-rtic = { version = "1.1.4" }
panic-semihosting = "0.6.0"
cortex-m-rt = "0.7.3"
defmt = "0.3.4"
defmt-rtt = "0.4.0"
stm32f4xx-hal = { version = "0.16.2", features = ["rt", "stm32f446"]}
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}

[dev-dependencies.ili9325]
version = "0.1.0"
path = "."

[dev-dependencies.cortex-m-semihosting]
version = "0.5.0"

[dev-dependencies.tinybmp]
version = "0.3.1"

[[example]]
name = "ili9325-on-gpio"
